# Justly.jl

./: .gitignore  CMakeLists.txt  DELETE.yml  LICENSE  Manifest.toml  Project.toml  README.md  test.musicxml  test.yml  vcpkg.json
.github/workflows/: ci.yml  permanent.yml  test.yml
cmake/: FindGamma.cmake
dev/: index.html  search_index.js
dev/search/: index.html
docs/: Manifest.toml  Project.toml  make.jl
docs/src/: index.md
examples/: just_tempered_clavier.justly  simple.json  simple.justly  simple.yml  wondrous_love.json  wondrous_love.justly
src/: AddButton.qml  AudioSchedule.jl  Beats.qml  ButtonText.qml  Chord.cpp  Chord.h  Chord.jl  Chord.qml  Circle.qml  ColumnTemplate.qml  DefaultInstrument.cpp  DefaultInstrument.h  Delete.qml  DisplayText.qml  Editor.cpp  Editor.h  For.qml  Gap.qml  GapItem.qml  HeaderTemplate.qml  Insert.qml  InsertButton.qml  Instrument.cpp  Instrument.h  Instrument.jl  Interval.jl  Interval.qml  Justly.jl  Justly.qml  Key.qml  ListTemplate.qml  Modulation.jl  Modulation.qml  MusicXML.jl  Note.cpp  Note.h  Note.jl  Note.qml  NoteChord.cpp  NoteChord.h  (+29 more)
test/: bad_beats.justly  bad_chord.justly  bad_denominator.justly  bad_frequency.justly  bad_initial_key.justly  bad_initial_key_and_tempo.justly  bad_interval.justly  bad_note.justly  bad_numerator.justly  bad_octave.justly  bad_tempo.justly  bad_volume.justly  runtests.jl  song.justly  song.musicxml  song.xml  test_song_file.justly  test_song_file.yml
